force-app/main/default/objects/InvoiceLineItem__c/fields/Amount_HT__c.field-meta.xml
<CustomField>
    <fullName>Amount_HT__c</fullName>
    <label>Amount HT</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>