force-app/main/default/objects/InvoiceLineItem__c/fields/Charge_Map_Item__c.field-meta.xml
<CustomField>
    <fullName>Charge_Map_Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Charge Map Item</label>
    <referenceTo>ChargeMapItem__c</referenceTo>
    <relationshipLabel>Invoice Line Items</relationshipLabel>
    <relationshipName>Invoice_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>