force-app/main/default/objects/InvoiceLineItem__c/fields/Netsuite_Sales_Order_Id__c.field-meta.xml
<CustomField>
    <fullName>Netsuite_Sales_Order_Id__c</fullName>
    <label>Netsuite Sales Order Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>